# polar-indicators

./: .gitignore  README.md  requirements.txt  setup.cfg
src/polars_indicators/: __init__.py
src/polars_indicators/indicators/: __init__.py
src/polars_indicators/notebooks/: moving_average_comparison.ipynb  testing.ipynb
src/polars_indicators/strategies/: __init__.py  buy_close_target.py  buy_close_trail.ipynb  buy_close_trail.py  buy_second_dip_in_uptrend.ipynb  buy_second_dip_in_uptrend.py  buy_x_week_low.ipynb  buy_x_week_low.py
src/polars_indicators/strategies/strategy_result/: __init__.py
src/polars_indicators/summarize/: __init__.py  trades.py
tests/: test_indicators.py  test_trades.py
