[metadata]
name = polars-indicators
version = 0.1.0
license = GNU General Public License v3.0
description = stock or stock-like pricing indicator calculations on polar DataFrames
long_description = file: README.rst
author = Avery Pustina
author_email = n/a
classifiers=
   Development Status :: 2 - Pre-Alpha

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   polars

[options.packages.find]
where=src